...
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/imgSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imgCamera"
        android:layout_marginEnd="100dp"
...
